crates/main/amethystate/tests/snapshots/error_reports__kv_empty_name.snap
---
source: crates/main/amethystate/tests/error_reports.rs
expression: err.to_string()
---
the write was given no path to land at: level 0 of the path has no name
