crates/main/amethystate/tests/snapshots/error_reports__map_empty_key.snap
---
source: crates/main/amethystate/tests/error_reports.rs
expression: shape(&err)
---
a name that cannot be a level
├╴map: cols
├╴key: 
│
╰─▶ level 1 of the path has no name
