crates/main/amethystate/tests/snapshots/error_reports__map_entry_wrong_type_toml.snap
---
source: crates/main/amethystate/tests/error_reports.rs
expression: shape(&err)
---
the value could not be encoded or decoded
├╴as: u32
├╴file: <store>
├╴map: cols
├╴entry: cpu
│
├─▶ Erased codec error: invalid type: string "wide", expected u32
│
╰─▶ invalid type: string "wide", expected u32
