crates/main/amethystate/tests/snapshots/error_reports__map_insert_an_interceptor_refused.snap
---
source: crates/main/amethystate/tests/error_reports.rs
expression: shape(&err)
---
an interceptor rejected the change
├╴refused by an interceptor on the map
├╴map: cols
╰╴affects: cols.cpu
