crates/main/amethystate/tests/snapshots/error_reports__volatile_field_an_interceptor_refused.snap
---
source: crates/main/amethystate/tests/error_reports.rs
expression: shape(&err)
---
an interceptor rejected the change
├╴refused by an interceptor on the field
├╴field: app.session
╰╴a volatile field: nothing was going to be stored either way
